implemented CRUD for Genres
